added quantity and discount features to item input form

--- a/divipay/src/app/globals.css
+++ b/divipay/src/app/globals.css
@@ -129,3 +129,15 @@ body {
   font-weight: 900;
   font-style: italic;
 }
+
+@layer utilities {
+  .no-arrows::-webkit-inner-spin-button,
+  .no-arrows::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  .no-arrows {
+    -moz-appearance: textfield;
+  }
+}
