--- a/divipay/src/app/globals.css
+++ b/divipay/src/app/globals.css
@@ -160,3 +160,12 @@ body {
 .overflow-x-auto::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
+
+
+/* #bill-container * {
+  line-height: 2 !important;
+} */
+
+.line-heig {
+  line-height: 2 !important;
+}
